standardize header action button colors to grey

--- a/src/app/pages/community/showcommunity/showcommunity.page.html
+++ b/src/app/pages/community/showcommunity/showcommunity.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button *ngIf="modalPage" (click)="closeModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
+      <ion-button *ngIf="modalPage" (click)="closeModal()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
       <ion-back-button *ngIf="!modalPage" (click)="destroyPlayers(null)" defaultHref="/map"></ion-back-button>
     </ion-buttons>
     <ion-title>{{community.name}}</ion-title>
