--- a/src/app/pages/manage/groups/groups.page.html
+++ b/src/app/pages/manage/groups/groups.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar *ngIf="modalPage">
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>{{userData.user.churches[userData.currentCommunityIndex].name}}: Groups</ion-title>
   </ion-toolbar>
