--- a/src/app/pages/user/about/about.page.html
+++ b/src/app/pages/user/about/about.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>About Me</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="openOnbaordingProcess('')" id="editall">Edit All</ion-button>
+      <ion-button (click)="openOnbaordingProcess('')" id="editall" color="grey">Edit All</ion-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
