--- a/src/app/pages/board/showboardpost/showboardpost.page.html
+++ b/src/app/pages/board/showboardpost/showboardpost.page.html
@@ -5,7 +5,7 @@
     </ion-buttons>
     <ion-title>{{resource['en-US'].matrix_string[0][2]}}</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="openActionSheet($event);">
+      <ion-button (click)="openActionSheet($event);" color="grey">
         <ion-icon ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
