--- a/src/app/pages/connect/focus-photo/focus-photo.page.html
+++ b/src/app/pages/connect/focus-photo/focus-photo.page.html
@@ -1,12 +1,12 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="modalCtrl.dismiss()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="modalCtrl.dismiss()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>{{filename}}</ion-title>
     <ion-buttons slot="end">
       <a [href]="imageUri" download>
-        <ion-button color="dark">Save</ion-button>
+        <ion-button color="grey">Save</ion-button>
       </a>
     </ion-buttons>
   </ion-toolbar>
