--- a/src/app/pages/group/editgroup/editgroup.page.html
+++ b/src/app/pages/group/editgroup/editgroup.page.html
@@ -1,7 +1,7 @@
 <ion-header>
   <ion-toolbar>
     <ion-buttons slot="start">
-      <ion-button (click)="modalCtrl.dismiss()"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="modalCtrl.dismiss()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title>{{groupForm.value.name}}</ion-title>
   </ion-toolbar>
