--- a/src/app/pages/group/groupinfo/groupinfo.page.html
+++ b/src/app/pages/group/groupinfo/groupinfo.page.html
@@ -1,11 +1,11 @@
 <ion-header *ngIf="chatService.currentChatProps[propIndex]">
   <ion-toolbar mode="ios">
     <ion-buttons slot="start">
-      <ion-button (click)="closeModal()" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
+      <ion-button (click)="closeModal(false)" color="grey"><ion-icon name="chevron-back-outline"></ion-icon></ion-button>
     </ion-buttons>
     <ion-title *ngIf="chatService.currentChatProps[propIndex].group.name">{{chatService.currentChatProps[propIndex].group.name}}</ion-title>
     <ion-buttons slot="end">
-      <ion-button (click)="presentPopover($event);">
+      <ion-button (click)="presentPopover($event);" color="grey">
         <ion-icon ios="ellipsis-horizontal" md="ellipsis-vertical"></ion-icon>
       </ion-button>
     </ion-buttons>
