--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -71,6 +71,10 @@ app-dashboard {
   .image-cropper {
     width: 120px;
     height: 120px;
+
+    img {
+      border-radius: 50%;
+    }
   }
 
   .current-date-display {
