--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -59,17 +59,23 @@
     </ion-row>
   </ion-grid>
   <div class="content-container" [ngStyle]="{'background': platform.width() >= 768 ? 'var(--ion-color-secondary)' : 'var(--ion-color-lightgrey)'}">
-    <div>
-      <ion-item lines="none">
-        <div class="image-cropper">
-          <img *ngIf="userData.user.avatar" [src]="userData.user.avatar" onerror="this.src='assets/img/avatar-default.jpg'"/>
-          <img *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"/>
-        </div>
-      </ion-item>
-      <div>{{userData.user.first_name}} {{userData.user.last_name}} <span *ngIf="userData.user.role === 'Contact' || userData.user.role === 'Pending'">{{userData.user.name}}</span></div>
-      <div>I am interested in joining the Restvo team and learn more as a software engineering intern.</div>
-      <ion-button (click)="openAboutMe()" >Edit Profile</ion-button>
-    </div>
+      <ion-row class="about-me-row">
+        <ion-col [size]="6">
+          <ion-item lines="none">
+          <div class="image-cropper">
+              <img *ngIf="userData.user.avatar" [src]="userData.user.avatar" onerror="this.src='assets/img/avatar-default.jpg'"/>
+              <img *ngIf="!userData.user.avatar" src="assets/img/avatar-default.jpg"/>
+            </div>
+          </ion-item>
+        </ion-col>
+        <ion-col [size]="6">
+          <ion-item>
+            <div>{{userData.user.first_name}} {{userData.user.last_name}} <span *ngIf="userData.user.role === 'Contact' || userData.user.role === 'Pending'">{{userData.user.name}}</span></div>
+            <div>I am interested in joining the Restvo team and learn more as a software engineering intern.</div>
+            <ion-button (click)="openAboutMe()" >Edit Profile</ion-button>
+          </ion-item>
+        </ion-col>
+      </ion-row>
 
     <!-- Complete your Profile Banner -->
     <ion-row class="profile-row" *ngIf="view === 'profile'">
