added background-color property to newly added about-me-row class ruleset

--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -419,6 +419,10 @@ app-dashboard {
     background-color: red;
   }
 
+  .about-me-row {
+    background-color: black;
+  }
+
   .profile-row {
     padding: 6px 0;
   }
