--- a/src/app/pages/user/dashboard/dashboard.page.scss
+++ b/src/app/pages/user/dashboard/dashboard.page.scss
@@ -423,6 +423,15 @@ app-dashboard {
     background-color: black;
   }
 
+  .about-me-name {
+    font-size: 20px;
+  }
+
+    .about-me-info {
+    font-size: 11px;
+    color: gray;
+  }
+
   .profile-row {
     padding: 6px 0;
   }
