added edit-button height styling along with about-me-name/info padding right styling

--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -80,7 +80,7 @@
               I am interested in joining the Restvo team and learn more as a software engineering intern.
               </p>
             </div>
-            <ion-button (click)="openAboutMe()" >Edit Profile</ion-button>
+            <ion-button class="edit-profile-button" expand="block" fill="outline" color="red" (click)="openAboutMe()" >Edit Profile</ion-button>
         </ion-col>
       </ion-row>
 
